fixed minor styling bugs on mobile

--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -71,7 +71,7 @@
 
 .black-overlay {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.553);
 }
@@ -139,7 +139,11 @@
 
 @media screen and (max-width: 500px) {
     .flyer-info {
-        margin-bottom: 0.2em;
+        margin-bottom: 0.5em;
+    }
+
+    .button-attending {
+        background-color: rgba(255, 255, 255, 0.306);
     }
 }
 
